--- a/sino_works_2.html
+++ b/sino_works_2.html
@@ -93,7 +93,7 @@
                 <div class="pup_window_content_part project_content_part">
                     <div class="pup_content">
                         <div class="part_title h5 font_bold emphasize_text">一、定義服務取向和客戶屬性</div>
-                        <div class="pup_normal_text">使視覺風格貼合產業和市場，執行設計有基礎共識和標準。</div>
+                        <div class="pup_normal_text">使視覺風格貼合產業和市場，有基礎共識和標準執行設計。</div>
                         <div class="pup_content_pic_container">
                             <div class="pup_content_pic_item">
                                 <div class="pup_content_pic_item" style="text-align:left;">
@@ -111,8 +111,8 @@
                 </div>
                 <div class="pup_window_content_part project_content_part">
                     <div class="pup_content">
-                        <div class="part_title h5 font_bold emphasize_text">二、統整精煉產品面向</div>
-                        <div class="pup_normal_text">統整服務取向、客戶屬性，明確產品設計方向。</div>
+                        <div class="part_title h5 font_bold emphasize_text">二、精煉產品面向</div>
+                        <div class="pup_normal_text">統整服務取向、客戶屬性，明確視覺風格方向。</div>
                         <div class="pup_content_pic_container">
                             <div class="pup_content_pic_item">
                                 <div class="pup_content_pic_item" style="text-align:left;">
@@ -129,11 +129,10 @@
                 </div>
                 <div class="pup_window_content_part project_content_part">
                     <div class="pup_content">
-                        <div class="part_title h5 font_bold emphasize_text">三、依產品面向以視覺概念進行描述</div>
-                        <div class="pup_normal_text">另可作其他面向依據，如：網站文案的用詞語氣、內容主題的制定...等。</div>
+                        <div class="part_title h5 font_bold emphasize_text">三、依產品面向發想視覺概念</div>
                         <div class="pup_content_pic_container">
                             <div class="pup_content_pic_item">
-                                <div class="pup_content_pic_item" style="text-align:left;margin-bottom:30px;">
+                                <div class="pup_content_pic_item" style="text-align:left;margin-bottom:20px;">
                                     <div class="pup_content_pic_item_content">
                                         <picture>
                                             <source media="(max-width:540px)" srcset="images/sino_pic_12-3-1.png" />
@@ -143,13 +142,15 @@
                                 </div>
                                 <div class="pup_content_pic_item" style="text-align:left;margin-bottom:30px;">
                                     <div class="pup_content_pic_item_content">
-                                        <div class="pup_normal_text">為符合永豐CIS企業識別規範，以永豐商標分析網站用色。</div>
+                                        <div class="pup_normal_text" style="margin-bottom:10px;">以永豐CIS企業識別規範，分析網站用色。</div>
                                         <picture>
                                             <source media="(max-width:540px)" srcset="images/sino_pic_12-3-2.png" />
                                             <img src="images/sino_pic_12-3-2.png" class="sino_pic_10">
                                         </picture>
-                                        <div class="pup_normal_text">永豐藍：深藍色<span class="emphasize_text">符合成熟、安穩</span>的調性，具備半數網站形容詞之意涵，因此<span class="emphasize_text">作為網站主色</span>。</div>
-                                        <div class="pup_normal_text">永豐紅：紅色擁有親切的調性，另外是<span class="emphasize_text">最具視覺引導力</span>的顏色，避免大量使用造成使用者視覺疲勞，因此<span class="emphasize_text">做為網站強調色</span>。</div>
+                                        <div class="pup_normal_text" style="margin-top:10px;">
+                                            永豐藍：<span class="emphasize_text">符合理智、安穩的面向，作為網站主色</span>。
+                                        </div>
+                                        <div class="pup_normal_text">永豐紅：<span class="emphasize_text">具強烈視覺引導</span>，避免大量使用造成視覺疲勞，<span class="emphasize_text">因此做為網站強調色</span>。</div>
                                     </div>
                                 </div>
                                 <div class="pup_content_pic_item" style="text-align:left;margin-bottom:30px;">
@@ -201,8 +202,8 @@
                 </div>
                 <div class="pup_window_content_part project_content_part">
                     <div class="pup_content">
-                        <div class="part_title h5 font_bold emphasize_text">四、借用具體範例，確認共識</div>
-                        <div class="pup_normal_text">除文字描述外，以視覺規劃相似風格的網站，和永豐業務單位討論獲得更確切的共識。</div>
+                        <div class="part_title h5 font_bold emphasize_text">四、以競品範例，確認風格樣貌</div>
+                        <div class="pup_normal_text">除文字描述外，以相似視覺風格的網站，和永豐業務單位討論，形成更確切的共識。</div>
                         <div class="pup_content_pic_container" style="margin-top:25px;">
                             <div class="pup_content_pic_item">
                                 <div class="pup_content_pic_item" style="text-align:left;">
