--- a/sino_works_6.html
+++ b/sino_works_6.html
@@ -130,7 +130,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="pup_window_content_part project_content_part" style="margin-bottom:30px;padding-left:0px;">
+                        <div class="pup_window_content_part project_content_part" style="margin-bottom:30px;padding-left:0px;display:none;">
                             <div class="pup_content">
                                 <div class="part_title h5 font_bold emphasize_text">進行測試</div>
                                 <div class="pup_content_text" style="margin-top:10px;padding-left:0px;">
@@ -177,7 +177,7 @@
                         </div>
                         <div class="pup_window_content_part project_content_part" style="margin-bottom:30px;padding-left:0px;">
                             <div class="pup_content">
-                                <div class="part_title h5 font_bold emphasize_text">彙整資料</div>
+                                <div class="part_title h5 font_bold emphasize_text">測試後，彙整資料</div>
                                 <div class="pup_text large_text">
                                     以其中一名受測者為範例。
                                 </div>
@@ -230,7 +230,7 @@
                                     <div class="text_row">
                                         <div class="text_item">
                                             <div class="text_item_title h6 font_bold emphasize_text">四、使用旅程</div>
-                                            <div class="pup_normal_text_small" style="margin-bottom:5px;">測試複盤回饋統整。</div>
+                                            <div class="pup_normal_text_small" style="margin-bottom:5px;">測試回饋統整。</div>
                                             <div>
                                                 <picture>
                                                     <source media="(max-width:768px)" srcset="images/sino_pic_14-2-768.png" />
