--- a/sino_works_2.html
+++ b/sino_works_2.html
@@ -176,7 +176,7 @@
                                         </picture>
                                         <div class="pup_normal_text">
                                             <ul class="text_item_list" style="list-style:disc;padding-left:25px;margin:10px 0px;">
-                                                <li>避免顏色鮮豔活潑，使用低飽和度色彩，如：淺藍、深藍、深紅。</li>
+                                                <li>以低飽和度的冷色系，如：淺藍、深藍，避免網站活潑鮮豔。</li>
                                                 <li>排版層級明確、版面整齊有序。</li>
                                             </ul>
                                         </div>
@@ -208,21 +208,21 @@
                             <div class="pup_content_pic_item">
                                 <div class="pup_content_pic_item" style="text-align:left;">
                                     <div class="pup_content_pic_item_content">
-                                        <div class="pup_normal_text_small">國泰人壽為例，低飽和度色彩、淺色系網站背景、圓潤化介面圖形。</div>
+                                        <div class="pup_normal_text_small">國泰人壽：低飽和度色彩、淺色系網站背景、圓潤化介面圖形。</div>
                                         <picture>
                                             <source media="(max-width:768px)" srcset="images/sino_pic_12-3-6-768.png" />
                                             <img src="images/sino_pic_12-3-6.png" class="sino_pic_10">
                                         </picture>
                                     </div>
                                     <div class="pup_content_pic_item_content" style="margin-top:10px;">
-                                        <div class="pup_normal_text_small">南山人壽為例，卡通風格插畫配圖。</div>
+                                        <div class="pup_normal_text_small">南山人壽：卡通風格插畫配圖。</div>
                                         <picture>
                                             <source media="(max-width:768px)" srcset="images/sino_pic_12-3-7-768.png" />
                                             <img src="images/sino_pic_12-3-7.png" class="sino_pic_10">
                                         </picture>
                                     </div>
                                     <div class="pup_content_pic_item_content" style="margin-top:10px;">
-                                        <div class="pup_normal_text_small">保險醫療站為例，排版層級明確、版面整齊有序、卡通風格插畫配圖。</div>
+                                        <div class="pup_normal_text_small">保險醫療站：排版層級明確、版面整齊有序、卡通風格插畫配圖。</div>
                                         <picture>
                                             <source media="(max-width:768px)" srcset="images/sino_pic_12-3-8-768.png" />
                                             <img src="images/sino_pic_12-3-8.png" class="sino_pic_10">
