--- a/sino_works_3.html
+++ b/sino_works_3.html
@@ -74,7 +74,7 @@
 <body class="body_page sino_works_3_pup">
     <div class="pup_window_content" style="overflow:inherit;">
         <div style="display:flex;">
-            <div class="h4 font_bold">網站開發文件、設計系統</div>
+            <div class="h4 font_bold">網站開發文件、設計規範</div>
             <a href="uiux_index.html#p7_title" id="sino_w3_back">
                 <div class="page_back_btn">
                     回作品集<img src="images/arrow-left-link.png" alt="">
