--- a/uiux_index.html
+++ b/uiux_index.html
@@ -886,7 +886,7 @@
                             <div class="progress_item_content" style="margin-top:3px;">
                                 <ul style="list-style:disc;padding-left:23px;">
                                     <li>業務訪談了解需求並規劃產品。</li>
-                                    <li>交付跨部門開發文件和介面設計系統。</li>
+                                    <li>交付跨部門開發文件和介面設計規範。</li>
                                     <li>實行易用性測試和行動建議報告。</li>
                                 </ul>
                             </div>
@@ -1070,10 +1070,10 @@
                                 <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a href="sino_works_2.html">設計稿</a></span>
                             </div>
                             <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
-                                <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a href="sino_works_3.html">網站開發文件、設計系統介紹</a></span>
+                                <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a href="sino_works_3.html">網站開發文件、設計規範介紹</a></span>
                             </div>
                             <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
-                                <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a href="https://www.figma.com/design/RSNBhP51ZdXt9ECUOnr1Eu/%E6%B0%B8%E8%B1%90%E7%B6%B2%E8%B7%AF%E6%8A%95%E4%BF%9D%E7%B6%B2%E7%AB%99_mockup?node-id=0-1&p=f&t=QwG6qnLmWYiPU3aM-0" target="_blank" id="sino_mockups_figma">網站開發文件、設計系統(figma)</a></span>
+                                <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a href="https://www.figma.com/design/RSNBhP51ZdXt9ECUOnr1Eu/%E6%B0%B8%E8%B1%90%E7%B6%B2%E8%B7%AF%E6%8A%95%E4%BF%9D%E7%B6%B2%E7%AB%99_mockup?node-id=0-1&p=f&t=QwG6qnLmWYiPU3aM-0" target="_blank" id="sino_mockups_figma">網站開發文件、設計規範(figma)</a></span>
                             </div>
 
                             <div style="margin-top:10px;">
