--- a/sino_works_4.html
+++ b/sino_works_4.html
@@ -437,8 +437,8 @@
                     <div class="pup_content">
                         <div class="part_title h5 font_bold emphasize_text">一、設計符合網站開發、維運</div>
                         <div class="pup_content_pic_container" style="margin-top:20px;">
-                            <div class="pup_content_pic_item" style="text-align:left;margin-bottom:20px;">
-                                <div class="pup_normal_text" style="margin-bottom:5px;"><span class="emphasize_text">考量資料暫存，滿足使用體驗</span></div>
+                            <div class="pup_content_pic_item" style="text-align:left;margin-bottom:30px;">
+                                <div class="pup_normal_text font_bold" style="margin-bottom:5px;"><span class="emphasize_text">1.考量資料暫存，滿足使用體驗</span></div>
                                 <div class="pup_content_pic_item_content">
                                     <picture>
                                         <source media="(max-width:430px)" srcset="images/sino_pic_13-11-1-430.png" />
@@ -456,19 +456,23 @@
                                     </picture>
                                 </div>
                             </div>
-                            <div class="pup_content_pic_item" style="text-align:left;margin-bottom:20px;">
-                                <div class="pup_normal_text emphasize_text" style="margin-bottom:5px;">介面元件擴充性</div>
+                            <div class="pup_content_pic_item" style="text-align:left;margin-bottom:30px;">
+                                <div class="pup_normal_text emphasize_text font_bold" style="margin-bottom:5px;">2.介面元件擴充性</div>
                                 <div class="pup_content_pic_item_content">
-                                    <div class="pup_normal_text_small">以原子化設計，延伸組合各式操作介面。<br />如：各險種資料選單-彈跳視窗</div>
+                                    <div class="pup_normal_text"><span class="emphasize_text">以原子化設計，延伸組合各式操作介面。</span><br />如：各險種資料選單-彈跳視窗</div>
                                     <picture>
-                                        <img src="images/sino_pic_13-12-1.png" class="sino_pic_10">
+                                        <img src="images/sino_pic_13-12-1.png" class="sino_pic_10" style="max-width:1200px;">
                                     </picture>
-                                    <div class="pup_normal_text_small" style="margin-top:5px;">考量資訊數量的版型應對</div>
+                                </div>
+                            </div>
+                            <div class="pup_content_pic_item" style="text-align:left;margin-bottom:30px;">
+                                <div class="pup_normal_text emphasize_text font_bold" style="margin-bottom:5px;">3.考量資訊數量的版型應對</div>
+                                <div class="pup_content_pic_item_content">
                                     <picture>
                                         <source media="(max-width:540px)" srcset="images/sino_pic_11_4-540.png">
                                         <source media="(max-width:768px)" srcset="images/sino_pic_11_4-768.png">
                                         <source media="(max-width:960px)" srcset="images/sino_pic_11_4-960.png">
-                                        <img src="images/sino_pic_11_4.png" class="sino_pic_10">
+                                        <img src="images/sino_pic_11_4.png" class="sino_pic_10" style="max-width:750px;">
                                     </picture>
                                 </div>
                             </div>
@@ -485,8 +489,12 @@
                                 </div>
                                 <div class="pup_content_pic_item_content">
                                     <picture>
-                                        <source media="(max-width:768px)" srcset="images/sino_pic_13-14-1.png" />
                                         <img src="images/sino_pic_13-14-1.png" class="sino_pic_10">
+                                    </picture>
+                                </div>
+                                <div class="pup_content_pic_item_content" style="width:100%;margin-top:20px;">
+                                    <picture>
+                                        <img src="images/sino_pic_13-14-2.png" class="sino_pic_10">
                                     </picture>
                                 </div>
                                 <div class="pup_normal_text_small">另減少前端開發(導覽條在螢幕向下滑動隱藏、向上滑動顯示)。</div>
