--- a/sino_works_4.html
+++ b/sino_works_4.html
@@ -260,36 +260,34 @@
                         <div class="pup_normal_text">根據資訊內容，優化排版並模組化。</div>
                         <div class="pup_content_pic_container" style="margin-top:20px;">
                             <div class="pup_content_pic_item" style="text-align:left;">
-                                <div class="pup_normal_text" style="margin-bottom:10px;"><span class="emphasize_text">把各家保險公司的方案商品，用一套介面配置</span>呈現給使用者，需深度思考版面配置。</div>
-                                <div class="pup_normal_text" style="margin-bottom:5px;">如：保費試算介面，欄位項目和理賠項目<span class="emphasize_text">內容長短不一、視覺起點分散，導致版面空間凌亂。</span></div>
+                                <div class="pup_normal_text" style="margin-bottom:10px;"><span class="emphasize_text">把各家保險公司的方案商品，用一套版面配置</span>需深度思考視覺起點、閱讀動線。</div>
                                 <div class="pup_content_pic_item_content">
                                     <picture>
                                         <source media="(max-width:768px)" srcset="images/sino_pic_13-9-1.png" />
                                         <img src="images/sino_pic_13-9-1.png" class="sino_pic_11">
                                     </picture>
                                 </div>
-                                <div class="pup_normal_text" style="margin-top:10px;margin-bottom:5px;">視覺動線過長且零碎跳躍</div>
+                                <div class="pup_normal_text" style="margin-top:10px;margin-bottom:5px;">修正前</div>
                                 <div class="pup_content_pic_item_content" style="margin-top:5px;margin-bottom:5px;">
                                     <picture>
                                         <source media="(max-width:768px)" srcset="images/sino_pic_13-9-2.png" />
                                         <img src="images/sino_pic_13-9-2.png" class="sino_pic_11">
                                     </picture>
                                 </div>
-                                <div class="pup_normal_text" style="margin-top:5px;margin-bottom:5px;">設計排版，<span class="emphasize_text">改變視覺重心、轉換視覺起點</span>，使其保持整齊一致。</div>
+                                <div class="pup_normal_text" style="margin-top:5px;margin-bottom:5px;">設計版面<span class="emphasize_text">轉換視覺起點</span>，使閱讀動線有效連貫。</div>
                                 <div class="pup_content_pic_item_content" style="margin-bottom:10px;">
                                     <picture>
                                         <source media="(max-width:768px)" srcset="images/sino_pic_13-9-3.png" />
                                         <img src="images/sino_pic_13-9-3.png" class="sino_pic_11">
                                     </picture>
                                 </div>
-                                <div class="pup_normal_text" style="margin-top:10px;margin-bottom:5px;">縮短視覺動線有效率閱讀內容。</div>
                                 <div class="pup_content_pic_item_content">
                                     <picture>
                                         <source media="(max-width:768px)" srcset="images/sino_pic_13-9-4.png" />
                                         <img src="images/sino_pic_13-9-4.png" class="sino_pic_11">
                                     </picture>
                                 </div>
-                                <div class="pup_normal_text" style="margin-top:10px;margin-bottom:5px;"><span class="emphasize_text">版面模組化</span>，運用於其他險種。</div>
+                                <div class="pup_normal_text" style="margin-top:10px;margin-bottom:5px;"><span class="emphasize_text">模組化</span>運用於其他險種。</div>
                                 <div class="pup_content_pic_item_content">
                                     <div class="pup_normal_text_small">寵物險</div>
                                     <picture>
