--- a/sino_works_4.html
+++ b/sino_works_4.html
@@ -287,26 +287,10 @@
                                         <img src="images/sino_pic_13-9-4.png" class="sino_pic_11">
                                     </picture>
                                 </div>
-                                <div class="pup_normal_text" style="margin-top:10px;margin-bottom:5px;"><span class="emphasize_text">模組化</span>運用於其他險種。</div>
-                                <div class="pup_content_pic_item_content">
-                                    <div class="pup_normal_text_small">寵物險</div>
-                                    <picture>
-                                        <source media="(max-width:768px)" srcset="images/sino_pic_13-9-5.png" />
-                                        <img src="images/sino_pic_13-9-5.png" class="sino_pic_11">
-                                    </picture>
-                                </div>
-                                <div class="pup_content_pic_item_content" style="margin-top:5px;">
-                                    <div class="pup_normal_text_small">年金險</div>
-                                    <picture>
-                                        <source media="(max-width:768px)" srcset="images/sino_pic_13-9-6.png" />
-                                        <img src="images/sino_pic_13-9-6.png" class="sino_pic_11">
-                                    </picture>
-                                </div>
                             </div>
                         </div>
-                        <div class="pup_content_pic_container" style="margin-top:20px;">
+                        <div class="pup_content_pic_container" style="margin-top:50px;">
                             <div class="pup_content_pic_item" style="text-align:left;">
-                                <div class="pup_normal_text">例：網站各主題資訊頁</div>
                                 <div class="pup_normal_text" style="margin-bottom:5px;">根據內容層次，<span class="emphasize_text">設計階層式版面。</span></div>
                                 <div class="pup_normal_text_small emphasize_text" style="margin-bottom:5px;">以閱讀順序(上至下)，直覺感受內容轉換和層級歸屬</div>
                                 <div class="pup_content_pic_item_content">
@@ -315,7 +299,7 @@
                                         <img src="images/sino_pic_13-9-7.png" class="sino_pic_11">
                                     </picture>
                                 </div>
-                                <div class="pup_normal_text" style="margin-top:10px;margin-bottom:5px;"><span class="emphasize_text">模組化</span>，運用於其他頁面。</div>
+                                <div class="pup_normal_text" style="margin-top:10px;margin-bottom:5px;"><span class="emphasize_text">模組化</span>其他頁面同樣運用。</div>
                                 <div class="pup_content_pic_item_content">
                                     <div class="pup_normal_text_small">常見問答</div>
                                     <picture>
