--- a/sino_works_4.html
+++ b/sino_works_4.html
@@ -142,15 +142,15 @@
                         <div class="pup_normal_text">易用性原則的運用，例：設計不同「申請投保」流程入口，<span class="emphasize_text">增加網站目標轉換率</span>。</div>
                         <div class="pup_content_pic_container" style="margin-top:20px;">
                             <div class="pup_content_pic_item" style="text-align:left;margin-bottom:20px;">
-                                <div class="pup_normal_text" style="margin-bottom:5px;"><span class="emphasize_text">1.想直接申請投保</span>：<br />於首頁橫幅廣告設置「立即投保」按鈕。</div>
-                                <div class="pup_normal_text" style="margin-top:20px;margin-bottom:5px;"><span class="emphasize_text">2.想比較理賠項目和保費金額</span>：<br />保費試算搭配「立即投保」按鈕。</div>
+                                <div class="pup_normal_text" style="margin-bottom:5px;"><span class="emphasize_text">1.想直接申請投保</span>：<br />點擊首頁橫幅廣告「立即投保」按鈕。</div>
+                                <div class="pup_normal_text" style="margin-top:20px;margin-bottom:5px;"><span class="emphasize_text">2.想比較理賠項目和保費</span>：<br />保費試算後，點擊「立即投保」按鈕。</div>
                                 <div>
                                     <picture>
                                         <source media="(max-width:540px)" srcset="images/sino_pic_13-1-540.png" />
                                         <source media="(max-width:960px)" srcset="images/sino_pic_13-1-768.png" />
                                         <img src="images/sino_pic_13-1.png" class="sino_pic_11">
                                     </picture>
-                                    <div class="pup_normal_text" style="margin-top:20px;margin-bottom:5px;"><span class="emphasize_text">3.想了解完整保險資訊</span>：<br />前往P1_保險商品頁，搭配「立即投保」按鈕。</div>
+                                    <div class="pup_normal_text" style="margin-top:20px;margin-bottom:5px;"><span class="emphasize_text">3.想了解完整保險資訊</span>：<br />瀏覽保險商品頁，點擊「立即投保」按鈕。</div>
                                     <picture>
                                         <source media="(max-width:540px)" srcset="images/sino_pic_13-2-540.png" />
                                         <source media="(max-width:960px)" srcset="images/sino_pic_13-2-768.png" />
