--- a/sino_works_4.html
+++ b/sino_works_4.html
@@ -139,18 +139,18 @@
                 <div class="pup_window_content_part project_content_part" style="margin-bottom:40px;">
                     <div class="pup_content">
                         <div class="part_title h5 font_bold emphasize_text">二、滿足各種使用情境</div>
-                        <div class="pup_normal_text">易用性原則的運用，例：設計不同「申請投保」流程入口，<span class="emphasize_text">增加網站目標轉換率</span>。</div>
+                        <div class="pup_normal_text">易用性原則之一，例：設計不同「申請投保」流程入口，<span class="emphasize_text">增加網站目標轉換率</span>。</div>
                         <div class="pup_content_pic_container" style="margin-top:20px;">
                             <div class="pup_content_pic_item" style="text-align:left;margin-bottom:20px;">
-                                <div class="pup_normal_text" style="margin-bottom:5px;"><span class="emphasize_text">1.想直接申請投保</span>：<br />點擊首頁橫幅廣告「立即投保」按鈕。</div>
-                                <div class="pup_normal_text" style="margin-top:20px;margin-bottom:5px;"><span class="emphasize_text">2.想比較理賠項目和保費</span>：<br />保費試算後，點擊「立即投保」按鈕。</div>
+                                <div class="pup_normal_text" style="margin-bottom:5px;"><span class="emphasize_text">1.想直接申請投保</span>：<br />首頁橫幅廣告搭配「立即投保」按鈕。</div>
+                                <div class="pup_normal_text" style="margin-top:20px;margin-bottom:5px;"><span class="emphasize_text">2.想比較理賠項目和保費</span>：<br />提供保費試算，搭配「立即投保」按鈕。</div>
                                 <div>
                                     <picture>
                                         <source media="(max-width:540px)" srcset="images/sino_pic_13-1-540.png" />
                                         <source media="(max-width:960px)" srcset="images/sino_pic_13-1-768.png" />
                                         <img src="images/sino_pic_13-1.png" class="sino_pic_11">
                                     </picture>
-                                    <div class="pup_normal_text" style="margin-top:20px;margin-bottom:5px;"><span class="emphasize_text">3.想了解完整保險資訊</span>：<br />瀏覽保險商品頁，點擊「立即投保」按鈕。</div>
+                                    <div class="pup_normal_text" style="margin-top:20px;margin-bottom:5px;"><span class="emphasize_text">3.想了解完整保險資訊</span>：<br />提供保險商品頁，搭配「立即投保」按鈕。</div>
                                     <picture>
                                         <source media="(max-width:540px)" srcset="images/sino_pic_13-2-540.png" />
                                         <source media="(max-width:960px)" srcset="images/sino_pic_13-2-768.png" />
@@ -164,8 +164,8 @@
 
                 <div class="pup_window_content_part project_content_part" style="margin-bottom:40px;">
                     <div class="pup_content">
-                        <div class="part_title h5 font_bold emphasize_text">三、給予人性化設計</div>
-                        <div class="pup_normal_text">易用性原則的運用<span class="emphasize_text">判斷當前使用情境，即時給予功能或提示。</span></div>
+                        <div class="part_title h5 font_bold emphasize_text">三、操作指示和幫助</div>
+                        <div class="pup_normal_text">易用性原則之一<span class="emphasize_text">判斷當前使用情境，適時給予功能或提示。</span></div>
                         <div class="pup_normal_text">減少操作時間和負擔，增加網站易用性。</div>
                         <div class="pup_content_pic_container" style="margin-top:20px;">
                             <div class="pup_content_pic_item" style="text-align:left;margin-bottom:20px;">
@@ -203,8 +203,7 @@
                                     <source media="(max-width:960px)" srcset="images/sino_pic_13-6-768.png" />
                                     <img src="images/sino_pic_13-6.png" class="sino_pic_11">
                                 </picture>
-                                <div class="pup_normal_text" style="margin-top:20px;margin-bottom:5px;"><span class="emphasize_text">4.申請投保失敗：<br /></span>投保申請結果頁，<span class="emphasize_text">搭配「重新投保」按鈕</span>，使用者能快速接續操作。</div>
-                                <div class="pup_normal_text_small"><span class="emphasize_text">*接續重新投保，前端載入前次填寫的資料</span>，減少再次輸入時間。</div>
+                                <div class="pup_normal_text" style="margin-top:20px;margin-bottom:5px;"><span class="emphasize_text">4.申請投保完成：<br /></span>依各需求情境提供對應頁面連結。</div>
                                 <picture>
                                     <source media="(max-width:540px)" srcset="images/sino_pic_13-7-540.png" />
                                     <source media="(max-width:960px)" srcset="images/sino_pic_13-7-768.png" />
