--- a/sino_works_4.html
+++ b/sino_works_4.html
@@ -164,9 +164,8 @@
 
                 <div class="pup_window_content_part project_content_part" style="margin-bottom:40px;">
                     <div class="pup_content">
-                        <div class="part_title h5 font_bold emphasize_text">三、操作指示和幫助</div>
+                        <div class="part_title h5 font_bold emphasize_text">三、人性化指示和幫助</div>
                         <div class="pup_normal_text">易用性原則之一<span class="emphasize_text">判斷當前使用情境，適時給予功能或提示。</span></div>
-                        <div class="pup_normal_text">減少操作時間和負擔，增加網站易用性。</div>
                         <div class="pup_content_pic_container" style="margin-top:20px;">
                             <div class="pup_content_pic_item" style="text-align:left;margin-bottom:20px;">
                                 <div class="pup_normal_text" style="margin-bottom:5px;"><span class="emphasize_text">1.未登入會員申請投保：</span><br />點擊「立即投保」按鈕，<span class="emphasize_text">顯示提示視窗，其中設置登入/註冊按鈕</span>，使用者能快速接續操作。</div>
@@ -203,7 +202,13 @@
                                     <source media="(max-width:960px)" srcset="images/sino_pic_13-6-768.png" />
                                     <img src="images/sino_pic_13-6.png" class="sino_pic_11">
                                 </picture>
-                                <div class="pup_normal_text" style="margin-top:20px;margin-bottom:5px;"><span class="emphasize_text">4.申請投保完成：<br /></span>依各需求情境提供對應頁面連結。</div>
+                                <div class="pup_normal_text" style="margin-top:20px;margin-bottom:5px;"><span class="emphasize_text">4.確認投保資料：<br /></span>統整顯示先前填寫的投保資料，並提供「返回修改」按鈕。</div>
+                                <picture>
+                                    <source media="(max-width:540px)" srcset="images/sino_pic_13-7-2-540.png" />
+                                    <source media="(max-width:960px)" srcset="images/sino_pic_13-7-2-768.png" />
+                                    <img src="images/sino_pic_13-7-2.png" class="sino_pic_11">
+                                </picture>
+                                <div class="pup_normal_text" style="margin-top:20px;margin-bottom:5px;"><span class="emphasize_text">5.申請投保完成：<br /></span>依各需求情境提供對應頁面連結。</div>
                                 <picture>
                                     <source media="(max-width:540px)" srcset="images/sino_pic_13-7-540.png" />
                                     <source media="(max-width:960px)" srcset="images/sino_pic_13-7-768.png" />
