--- a/sino_works_4.html
+++ b/sino_works_4.html
@@ -166,10 +166,10 @@
                     <div class="pup_content">
                         <div class="part_title h5 font_bold emphasize_text">三、人性化指示和幫助</div>
                         <div class="pup_normal_text">易用性原則之一<span class="emphasize_text">判斷當前使用情境，適時給予功能或提示。</span></div>
-                        <div class="pup_content_pic_container" style="margin-top:20px;">
+                        <div class="pup_normal_text_small" style="margin-top:15px;">以網站目標-投保流程為例</div>
+                        <div class="pup_content_pic_container" style="margin-top:15px;">
                             <div class="pup_content_pic_item" style="text-align:left;margin-bottom:20px;">
-                                <div class="pup_normal_text" style="margin-bottom:5px;"><span class="emphasize_text">1.未登入會員申請投保：</span><br />點擊「立即投保」按鈕，<span class="emphasize_text">顯示提示視窗，其中設置登入/註冊按鈕</span>，使用者能快速接續操作。</div>
-                                <div class="pup_normal_text_small">*投保需登入會員</div>
+                                <div class="pup_normal_text" style="margin-bottom:5px;"><span class="emphasize_text">1.申請投保(未登入會員)：</span><br />點擊「立即投保」按鈕，<span class="emphasize_text">顯示提示視窗，其中設置登入/註冊按鈕</span>，使用者能快速接續操作。</div>
                                 <div class="pup_content_pic_item_content">
                                     <picture>
                                         <source media="(max-width:540px)" srcset="images/sino_pic_13-3-540.png" />
@@ -179,7 +179,7 @@
                                 </div>
                             </div>
                             <div class="pup_content_pic_item" style="text-align:left;">
-                                <div class="pup_normal_text" style="margin-bottom:5px;"><span class="emphasize_text">2-1.使用者進行保險試算，</span>前端紀錄試算資料。</div>
+                                <div class="pup_normal_text" style="margin-bottom:5px;"><span class="emphasize_text">2-1.保險試算：</span>前端紀錄使用者填寫的資料。</div>
                                 <div class="pup_content_pic_item_content">
                                     <picture>
                                         <source media="(max-width:540px)" srcset="images/sino_pic_13-4-540.png" />
@@ -187,7 +187,7 @@
                                         <img src="images/sino_pic_13-4.png" class="sino_pic_11">
                                     </picture>
                                 </div>
-                                <div class="pup_normal_text" style="margin-top:10px;margin-bottom:5px;"><span class="emphasize_text">2-2.使用者申請投保時，</span><br />前端載入對應資料，減少再次輸入的時間。</div>
+                                <div class="pup_normal_text" style="margin-top:10px;margin-bottom:5px;"><span class="emphasize_text">2-2.填寫投保資料：</span><br />前端載入保費試算的資料，減少再次輸入的時間。</div>
                                 <div class="pup_content_pic_item_content">
                                     <picture>
                                         <source media="(max-width:540px)" srcset="images/sino_pic_13-5-540.png" />
@@ -195,14 +195,14 @@
                                         <img src="images/sino_pic_13-5.png" class="sino_pic_11">
                                     </picture>
                                 </div>
-                                <div class="pup_normal_text" style="margin-top:20px;margin-bottom:5px;"><span class="emphasize_text">3.新增身故受益人：</span><br />受益人通訊地址，<span class="emphasize_text">預先載入會員地址資料。</span></div>
-                                <div class="pup_normal_text_small">*判斷有機率是同住所之親屬，減少輸入時間。</div>
+                                <div class="pup_normal_text" style="margin-top:20px;margin-bottom:5px;"><span class="emphasize_text">3.填寫受益人資料：</span><br />受益人通訊地址，<span class="emphasize_text">預先載入會員地址資料。</span></div>
+                                <div class="pup_normal_text_small">*判斷大多為同住所之親屬，減少輸入時間。</div>
                                 <picture>
                                     <source media="(max-width:540px)" srcset="images/sino_pic_13-6-540.png" />
                                     <source media="(max-width:960px)" srcset="images/sino_pic_13-6-768.png" />
                                     <img src="images/sino_pic_13-6.png" class="sino_pic_11">
                                 </picture>
-                                <div class="pup_normal_text" style="margin-top:20px;margin-bottom:5px;"><span class="emphasize_text">4.確認投保資料：<br /></span>統整顯示先前填寫的投保資料，並提供「返回修改」按鈕。</div>
+                                <div class="pup_normal_text" style="margin-top:20px;margin-bottom:5px;"><span class="emphasize_text">4.確認保險資料：<br /></span>統整顯示先前填寫的投保資料，並提供「返回修改」按鈕。</div>
                                 <picture>
                                     <source media="(max-width:540px)" srcset="images/sino_pic_13-7-2-540.png" />
                                     <source media="(max-width:960px)" srcset="images/sino_pic_13-7-2-768.png" />
@@ -238,6 +238,18 @@
                         <div class="pup_normal_text">根據功能內容，設計合適的操作介面。</div>
                         <div class="pup_content_pic_container" style="margin-top:20px;">
                             <div class="pup_content_pic_item" style="text-align:left;">
+                                <div class="pup_normal_text">例：投保紀錄列表</div>
+                                <div class="pup_normal_text">如何幫使用者<sapn class="emphasize_text">快速辨識投保險種、狀態、重要資訊</sapn>。</div>
+                                <div class="pup_content_pic_item_content">
+                                    <div class="emphasize_text large_text font_bold" style="margin-top:30px;margin-bottom:10px;">介面設計要點</div>
+                                    <picture>
+                                        <img src="images/sino_pic_13-9-15-2.png" class="sino_pic_10">
+                                    </picture>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="pup_content_pic_container" style="margin-top:20px;">
+                            <div class="pup_content_pic_item" style="text-align:left;">
                                 <div class="pup_normal_text">例：旅遊國家選單</div>
                                 <div class="pup_normal_text">如何幫使用者<sapn class="emphasize_text">從197個國家，快速選擇到符合的國家</sapn>。</div>
                                 <div class="pup_content_pic_item_content">
@@ -247,7 +259,7 @@
                                         <img src="images/sino_pic_13-9-14.png" class="sino_pic_11">
                                     </picture>
                                     <div class="pup_normal_text_small">點擊旅遊國家欄位，顯示選單視窗</div>
-                                    <div class="emphasize_text large_text font_bold" style="margin-top:30px;margin-bottom:5px;">選單介面設計要點</div>
+                                    <div class="emphasize_text large_text font_bold" style="margin-top:30px;margin-bottom:10px;">介面設計要點</div>
                                     <picture>
                                         <source media="(max-width:540px)" srcset="images/sino_pic_13-9-15-430.png" />
                                         <source media="(max-width:960px)" srcset="images/sino_pic_13-9-15-540.png" />
@@ -324,7 +336,7 @@
                 </div>
                 <div class="pup_window_content_part project_content_part" style="margin-bottom:40px;">
                     <div class="pup_content">
-                        <div class="part_title h5 font_bold emphasize_text">三、提升資訊傳遞效率</div>
+                        <div class="part_title h5 font_bold emphasize_text">三、提升資訊辨識度</div>
                         <div class="pup_normal_text">例：以圖示輔助文字描述。</div>
                         <div class="pup_content_pic_container" style="margin-top:20px;">
                             <div class="pup_content_pic_item" style="text-align:left;">
